# deltagent

./: .gitignore  CHANGELOG.md  README.md  cli.py  deltaagent.toml  design.md  main.py  pyproject.toml  requirements.txt  variance_commentary_November_2024.docx  variance_commentary_November_2024.md
.cursor/rules/: rules
Formula/: deltaagent.rb
agent/: agent.py  models.py  parser.py  prompts.py
auth/: google.py
eval/: guidevar.md  runner.py  scorecard.md  scorecard_2.md  scorecard_3.md  scorecard_4.md  scorecard_5.md
eval/case_01_xero_march_2026/: config.json  expected_commentary.md  input.csv  mock_context.json  notes.md
eval/case_02_xero_feb_2026/: config.json  expected_commentary.md  input.csv  (+2 more)
evals/: baseline_round1.md  oracle_scorer.py  run_oracle_baseline.py  run_round2.py  run_round3.py  run_round4.py
exports/: __init__.py  exporter.py
mcp_client/: client.py  config.py  registry.py
tests/: test_executive_summary_guards.py  test_oracle_scorer.py  test_phase1_agent_core.py  test_phase2_mock_tools.py  test_phase3_tui.py  test_phase4_export.py  test_phase5_config.py  test_phase6_integration.py  test_phase6_tool_mode.py  test_phaseA_cli.py  test_phaseB_eval.py  test_phaseB_mcp.py  test_phaseB_schema.py  test_prompts_rollup.py
tools/: __init__.py  base.py  calendar_live.py  calendar_tool.py  crm_live.py  crm_tool.py  definitions.py  gmail_live.py  gmail_tool.py  google_oauth.py  mock_data.py  period_parse.py  slack_live.py  slack_tool.py  tool_mode.py
ui/: __init__.py  app.py
utils/: config.py  csv_validator.py  report_loader.py  schema.py
(+194 files in other folders)
